--- a/core/src/plugins/gui.ajax/res/themes/vision/css/ajaxplorer.css
+++ b/core/src/plugins/gui.ajax/res/themes/vision/css/ajaxplorer.css
@@ -3780,7 +3780,7 @@ div.user_entry span.cbContainer
 {
     display: inline-block;
     padding: 0 2px;
-    width: 30px;
+    width: 40px;
     text-align: center;
     cursor: pointer;
 }
